--- a/Woopons/CustomCells/RecentsCollectionCell.xib
+++ b/Woopons/CustomCells/RecentsCollectionCell.xib
@@ -25,26 +25,26 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oDF-A7-Dj5">
-                        <rect key="frame" x="0.0" y="5" width="315" height="177"/>
+                        <rect key="frame" x="5" y="8" width="305" height="171"/>
                         <subviews>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="efn-SD-pc9" customClass="RightCornerView" customModule="Woopons" customModuleProvider="target">
-                                <rect key="frame" x="10" y="5" width="204" height="115"/>
+                                <rect key="frame" x="10" y="5" width="196" height="109"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="barcode" translatesAutoresizingMaskIntoConstraints="NO" id="dEO-e3-Aun">
-                                        <rect key="frame" x="15" y="42.666666666666664" width="174" height="29.999999999999993"/>
+                                        <rect key="frame" x="15" y="39.666666666666664" width="166" height="29.999999999999993"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="aYT-7L-pzg"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="KFC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JOC-Aa-sJ0">
-                                        <rect key="frame" x="15" y="9.6666666666666679" width="174" height="23.000000000000004"/>
+                                        <rect key="frame" x="15" y="6.6666666666666679" width="166" height="23"/>
                                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Unlimited" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="apy-qm-YSm">
-                                        <rect key="frame" x="15" y="85" width="174" height="20"/>
+                                        <rect key="frame" x="15" y="79" width="166" height="20"/>
                                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="12"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -65,10 +65,10 @@
                                 </constraints>
                             </view>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rdK-6f-bvL" customClass="RightCornerView" customModule="Woopons" customModuleProvider="target">
-                                <rect key="frame" x="244" y="5" width="61" height="115"/>
+                                <rect key="frame" x="236" y="5" width="59" height="109"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FOOD &amp; BEVERAGE" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6GE-IO-7ar">
-                                        <rect key="frame" x="0.0" y="0.0" width="61" height="115"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="59" height="109"/>
                                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="12"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -85,7 +85,7 @@
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="food" translatesAutoresizingMaskIntoConstraints="NO" id="eDk-u4-HQb">
-                                <rect key="frame" x="10" y="135" width="32" height="32"/>
+                                <rect key="frame" x="10" y="129" width="32" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="32" id="6OX-TS-IfE"/>
                                     <constraint firstAttribute="width" constant="32" id="jBa-60-zo3"/>
@@ -97,13 +97,13 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="design" translatesAutoresizingMaskIntoConstraints="NO" id="KnM-dE-VND">
-                                <rect key="frame" x="214" y="5" width="30" height="115"/>
+                                <rect key="frame" x="206" y="5" width="30" height="109"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="AaC-hX-f32"/>
                                 </constraints>
                             </imageView>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m2T-PB-Bzg">
-                                <rect key="frame" x="208.66666666666666" y="142" width="96.333333333333343" height="25"/>
+                                <rect key="frame" x="198.66666666666666" y="136" width="96.333333333333343" height="25"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="See details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jNv-p2-wJU">
                                         <rect key="frame" x="10" y="2.6666666666666572" width="65.333333333333329" height="20"/>
@@ -184,10 +184,10 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="oDF-A7-Dj5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="6Db-Hq-W6a"/>
-                <constraint firstAttribute="bottom" secondItem="oDF-A7-Dj5" secondAttribute="bottom" constant="5" id="KD9-8E-iC3"/>
-                <constraint firstAttribute="trailing" secondItem="oDF-A7-Dj5" secondAttribute="trailing" id="q0A-6q-yck"/>
-                <constraint firstItem="oDF-A7-Dj5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="sCs-eZ-KX0"/>
+                <constraint firstItem="oDF-A7-Dj5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="6Db-Hq-W6a"/>
+                <constraint firstAttribute="bottom" secondItem="oDF-A7-Dj5" secondAttribute="bottom" constant="8" id="KD9-8E-iC3"/>
+                <constraint firstAttribute="trailing" secondItem="oDF-A7-Dj5" secondAttribute="trailing" constant="5" id="q0A-6q-yck"/>
+                <constraint firstItem="oDF-A7-Dj5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="sCs-eZ-KX0"/>
             </constraints>
             <size key="customSize" width="315" height="187"/>
             <connections>
