--- a/Woopons/Storyboards/Home.storyboard
+++ b/Woopons/Storyboards/Home.storyboard
@@ -1387,25 +1387,102 @@ passages van Lorem Ipsum beschikbaar maarhet .</string>
                                 <color key="textColor" name="primaryRed"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S0v-03-gTz">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GBS-57-m82">
+                                        <rect key="frame" x="30" y="222.5" width="315" height="222"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xfR-kp-zKl">
+                                                <rect key="frame" x="10" y="76" width="295" height="79"/>
+                                                <string key="text">Alert: Your coupon will expire within 60 seconds 
+after unlocking</string>
+                                                <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="16"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="nKO-Wk-iXZ">
+                                                <rect key="frame" x="20" y="170" width="275" height="42"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iip-rT-fLU">
+                                                        <rect key="frame" x="0.0" y="0.0" width="275" height="42"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="18"/>
+                                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                        <state key="normal" title="Ok"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                <real key="value" value="15"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                                <real key="value" value="1"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                                <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
+                                                        <connections>
+                                                            <action selector="okTapped:" destination="dtL-Xw-ZM1" eventType="touchUpInside" id="DZ9-EB-rkF"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="success" translatesAutoresizingMaskIntoConstraints="NO" id="XjZ-lQ-qY0">
+                                                <rect key="frame" x="137" y="20" width="41" height="41"/>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" name="primaryRed"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="xfR-kp-zKl" secondAttribute="trailing" constant="10" id="0il-NU-UiB"/>
+                                            <constraint firstAttribute="trailing" secondItem="nKO-Wk-iXZ" secondAttribute="trailing" constant="20" id="1vM-QT-a3O"/>
+                                            <constraint firstItem="xfR-kp-zKl" firstAttribute="leading" secondItem="GBS-57-m82" secondAttribute="leading" constant="10" id="764-ER-lND"/>
+                                            <constraint firstItem="XjZ-lQ-qY0" firstAttribute="top" secondItem="GBS-57-m82" secondAttribute="top" constant="20" id="7Bp-hf-Ux1"/>
+                                            <constraint firstAttribute="bottom" secondItem="nKO-Wk-iXZ" secondAttribute="bottom" constant="10" id="AZM-g8-naK"/>
+                                            <constraint firstItem="nKO-Wk-iXZ" firstAttribute="leading" secondItem="GBS-57-m82" secondAttribute="leading" constant="20" id="Ppa-Zw-3DC"/>
+                                            <constraint firstItem="XjZ-lQ-qY0" firstAttribute="centerX" secondItem="GBS-57-m82" secondAttribute="centerX" id="Wx1-oJ-L31"/>
+                                            <constraint firstItem="nKO-Wk-iXZ" firstAttribute="top" secondItem="xfR-kp-zKl" secondAttribute="bottom" constant="15" id="hYb-RC-r1q"/>
+                                            <constraint firstItem="nKO-Wk-iXZ" firstAttribute="centerX" secondItem="GBS-57-m82" secondAttribute="centerX" id="mDp-A6-CE4"/>
+                                            <constraint firstItem="xfR-kp-zKl" firstAttribute="top" secondItem="XjZ-lQ-qY0" secondAttribute="bottom" constant="15" id="nWG-GU-6CX"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="10"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="GBS-57-m82" firstAttribute="leading" secondItem="S0v-03-gTz" secondAttribute="leading" constant="30" id="Exp-7V-uvz"/>
+                                    <constraint firstAttribute="trailing" secondItem="GBS-57-m82" secondAttribute="trailing" constant="30" id="Faa-ci-Q41"/>
+                                    <constraint firstItem="GBS-57-m82" firstAttribute="centerY" secondItem="S0v-03-gTz" secondAttribute="centerY" id="nBz-6O-eed"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="A8J-l6-xfr"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="pfq-gC-PaZ" firstAttribute="top" secondItem="OEy-Hr-7rA" secondAttribute="bottom" constant="15" id="2lE-hn-sRz"/>
                             <constraint firstItem="NGy-1h-cGF" firstAttribute="centerX" secondItem="A8J-l6-xfr" secondAttribute="centerX" id="84b-eh-7ef"/>
+                            <constraint firstItem="S0v-03-gTz" firstAttribute="top" secondItem="A8J-l6-xfr" secondAttribute="top" id="DgD-Wh-NJd"/>
                             <constraint firstItem="YRl-Qm-iOS" firstAttribute="top" secondItem="pfq-gC-PaZ" secondAttribute="bottom" constant="20" id="J1A-73-nYx"/>
                             <constraint firstItem="A8J-l6-xfr" firstAttribute="trailing" secondItem="pfq-gC-PaZ" secondAttribute="trailing" constant="20" id="QMS-Ij-qwz"/>
+                            <constraint firstItem="S0v-03-gTz" firstAttribute="bottom" secondItem="A8J-l6-xfr" secondAttribute="bottom" id="SNr-aU-nWe"/>
                             <constraint firstItem="OEy-Hr-7rA" firstAttribute="top" secondItem="A8J-l6-xfr" secondAttribute="top" constant="20" id="eG4-CK-lbl"/>
                             <constraint firstItem="NGy-1h-cGF" firstAttribute="top" secondItem="YRl-Qm-iOS" secondAttribute="bottom" constant="25" id="ei0-Pe-dSx"/>
                             <constraint firstItem="A8J-l6-xfr" firstAttribute="trailing" secondItem="YRl-Qm-iOS" secondAttribute="trailing" constant="20" id="her-mm-fFD"/>
+                            <constraint firstItem="S0v-03-gTz" firstAttribute="trailing" secondItem="A8J-l6-xfr" secondAttribute="trailing" id="j1W-j2-dfF"/>
                             <constraint firstItem="YRl-Qm-iOS" firstAttribute="leading" secondItem="A8J-l6-xfr" secondAttribute="leading" constant="20" id="sUN-28-1X4"/>
                             <constraint firstItem="OEy-Hr-7rA" firstAttribute="centerX" secondItem="A8J-l6-xfr" secondAttribute="centerX" id="vP8-r5-aEc"/>
+                            <constraint firstItem="S0v-03-gTz" firstAttribute="leading" secondItem="A8J-l6-xfr" secondAttribute="leading" id="yAp-eF-1Bi"/>
                             <constraint firstItem="pfq-gC-PaZ" firstAttribute="leading" secondItem="A8J-l6-xfr" secondAttribute="leading" constant="20" id="ycq-SU-zvQ"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="couponCode" destination="KFp-g0-Fdt" id="56X-jY-5Gs"/>
                         <outlet property="dottedView" destination="YRl-Qm-iOS" id="AyH-MR-27U"/>
+                        <outlet property="popUpView" destination="S0v-03-gTz" id="Tyt-zc-Zc0"/>
                         <outlet property="timerLabel" destination="NGy-1h-cGF" id="and-Be-g9q"/>
                     </connections>
                 </viewController>
